Updated Blog component and fixed spacing issues

--- a/src/components/blog/blog.css
+++ b/src/components/blog/blog.css
@@ -1,83 +1,108 @@
-.blog .b-wrapper .b-row{
-    /* height: 80vh; */
-    margin-top: 5vh;
-    /* padding: 0 5vw 0 5vw; */
-}
-
-/* .blog {
-    overflow-y: scroll;
-} */
-
-.b-row {
-    display: flex;
-    flex-direction: row;
-}
-
-.b-col {
-    flex: 1;
-    border-left: 1px solid white;
-}
-
-.b-col-lg {
-    flex: 2;
-    display: flex;
-    /* flex-direction: column; */
-    border-right: 1px solid white;
-}
-
-.popular-post {
-    /* background: #ffd9d9; */
-    flex: 1;
-    padding: 0 20px 20px 0;
-}
-
-.suggested-post {
-    /* background: #ffdca9cc; */
-    padding: 0 0 20px 20px;
-
-}
-
-.suggested-post, .popular-post {
+/* .b-blog {
+    width: 90vw;
+    height: 90vh;
     display: flex;
     flex-direction: column;
-    /* align-items: start; */
+    align-items: center;
 }
 
-.post-row {
-    padding-bottom: 2vh;
-}
+.b-section {
+    background: blue;
+} */
 
-.post-row.meta{
+.b-wrapper {
     display: flex;
     flex-direction: row;
-    flex: 1;
-}
-
-.post-img img {
-    height: 100%;
+    justify-content: center;
+    height: 80vh;
     width: 100%;
 }
 
-/* .popular-post .post-img img {
-    height: 300px;
-} */
-
-.post-row span {
-    font-size: 12px;
+.b-left {
+    flex:3.5;
+    height: 80vh;
+    overflow: hidden;
+    object-fit: cover;
+    border-right: 1px solid white;
 }
 
-.post-date {
+.b-right {
+    flex: 1.5;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 80vh;
+    overflow: hidden;
+    border-left: 1px solid white;
+}
+
+.b-row {
+    flex: 1;
+    height: 40vh;
+    width: 92%;
+    padding-left: 2vw;
+    /* align-items: center; */
+}
+
+.b-row-lg {
+    height: 80vh;
+    width: 97%;
+    padding-right: 2vw;
+}
+
+.post-img {
+    height: 60%;
+    padding-bottom: 2%;
+}
+
+.post-img-lg {
+    height: 70%;
+    padding-bottom: 2%;
+}
+
+.thumbnail {
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.post-meta {
+    display: flex;
+    flex-direction: row;
+    padding-bottom: 2%;
+}
+
+.meta-col {
     flex: 1;
     display: flex;
-    justify-content: start;
+    font-size: 14px;
 }
 
 .post-author {
-    flex: 1;
-    display: flex;
     justify-content: end;
 }
 
-.post-summary {
-    font-size: 15px;
+.post-date {
+    justify-content: start;
+}
+
+.post-header {
+    padding-bottom: 1.5%;
+}
+
+.post-subheading {
+    font-size: 20px;
+}
+
+.popular.post-subheading {
+    font-size: 12px;
+}
+
+.popular.post-author, .popular.post-date {
+    font-size: 11px;
+}
+
+.popular.post-header {
+
 }
